resolve some invocation errors due to java9's new security model by exporting the needed entries